[internal] Fix some routes from optional to publich and user RFC3339Nano for createdat
